Fixed visible scroll snapping bug scroller

--- a/src/film-database/components/media/_fdMediaGrid.scss
+++ b/src/film-database/components/media/_fdMediaGrid.scss
@@ -30,7 +30,7 @@
         display: flex;
         /* Scroll snapping */
         overflow-x: scroll;
-        // scrollbar-width: none;
+        scrollbar-width: none;
         scroll-behavior: smooth;
         // scroll-snap-type: x proximity;
         scroll-padding: 0 0;
